<resources>
    <string name="app_name">Shoppy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="signup_link_text">Not a member ? <u><b>SignUp</b></u></string>
    <string name="login_link_text">Already account ? <u><b>SignIn</b></u></string>
    <string name="forgot_password_info">Please enter your mobile number for change password.</string>
    <string name="remerered_password_login_link">Remembered Password ? <u><b>Login</b></u></string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_my_cart">My Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_Feedback">Feedback</string>
    <string name="title_help">Help</string>
    <string name="title_share">Share</string>
    <string name="warn_no_internet">Please check internet connection</string>
    <string name="title_my_order">My Orders</string>
    <string name="share_app_msg">Hey, Checkout this app which provides delivery from your nearest shops. Also, you will get <b>50% OFF</b> on every order.</string>
    <string name="rupee_symbol">$</string>
    <string name="text_no_reviews">No reviews</string>
    <string name="hint_search_product">Type product name</string>
    <string name="text_no_products">Product Not Found</string>

    <string name="warn_empty_email">Please enter email.</string>
    <string name="warn_empty_first_name">Please enter first name.</string>
    <string name="warn_empty_last_name">Please enter last name.</string>
    <string name="warn_empty_phone">Please enter phone number.</string>
    <string name="warn_empty_password">Please enter password.</string>
    <string name="warn_invalid_phone_number">Please enter valid 10 digit mobile number.</string>
    <string name="password_length_msg">At least 8 character required in password!</string>
    <string name="warn_invalid_email">Please enter valid email.</string>
    <string name="title_otp">OTP Verofication</string>
    <string name="msg_enter_otp">Please enter one time password for verify your mobile number</string>
    <string name="text_verify">Verify</string>
    <string name="otp_resenr_msg">Din\'t receive OTP? Resend</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">COnfirm Password</string>
    <string name="text_submit">Submit</string>
    <string name="empty_confirm_password_msg">Please enter confirm password</string>
    <string name="password_not_match_msg">Confirm password not match</string>
    <string name="text_no_result">No Result Found</string>
    <string name="mdg_no_product_available">No Products Found</string>
    <string name="sort_type_price_h_to_l">Sort by price - High to Low</string>
    <string name="sort_type_price_l_to_h">Sort by price - Low to High</string>
    <string name="text_product_review">Product Rating and Reviews</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="text_buy_now">Buy Now</string>
    <string name="text_continue">Continue</string>
    <string name="text_total">Total</string>
    <string name="text_out_of_stock">Out of Stock</string>
    <string name="msg_empty_cart">You have not added any products in your cart</string>
    <string name="text_total_saving">Your total saving will be $%1$s !</string>
    <string name="delete_product_from_cart_msg">Are you sure want to delete this product?</string>
    <string name="msg_logout">Are you want to logout ?</string>
    <string name="text_email">Email</string>
    <string name="text_date_of_birthday">Date of Birth</string>
    <string name="text_gender">Gender</string>
    <string name="title_my_reviews">My Review</string>
    <string name="title_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="warn_select_gender">Please select gender</string>
    <string name="empty_current_password">Please enter current password</string>
    <string name="empty_password_msg">Please enter new password</string>
    <string name="msg_no_review_for_product">No reviews</string>
    <string name="msg_permission_needed">Storage Permission required for submit screenshot</string>
    <string name="warn_valid_mobile_number">Please enter valid mobile number</string>
    <string name="text_no_order">No Orders Found</string>
    <string name="text_add_review">Add Review</string>
    <string name="text_total_product">Total Products</string>
    <string name="text_subtotal">Sub Total</string>
    <string name="text_discount">Discount</string>
    <string name="text_delivery">Delivery Charges</string>
    <string name="text_get_invoice">Get Invoice</string>
    <string name="text_reorder">Reorder</string>
    <string name="title_order_details">Order Details</string>
    <string name="text_total_saving_order_details">Your have saved total $%1$s !</string>
    <string name="change_address">Change Address</string>
    <string name="text_user_name">Full Name</string>
    <string name="text_house_number">House Number</string>
    <string name="text_street_name">Street Name</string>
    <string name="text_landmark">Landmark</string>
    <string name="text_city">City</string>
    <string name="text_state">State</string>

    <string name="text_order_placed">Your order has been placed successfully</string>

</resources>
