<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/shoppy_logo"
            app:layout_constraintBottom_toTopOf="@+id/tvTitleForgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvTitleForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="CHANGE PASSWORD"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/etCurrentPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />


        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_current_password"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/etNewPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleForgot" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/_15sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/etConfPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCurrentPassword" />

        <EditText
            android:id="@+id/etConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword|text"
            android:padding="@dimen/_15sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/GeneralButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/text_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>